# OpenBrain

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  check.sh  deno.json  deploy_all.sh  open-brain-complete-guide-kinds-version.md  regen-db-types.sh  ruff.toml
.claude/: settings.json
.claude/memory/: MEMORY.md  feedback_deploy_script.md  feedback_precommit.md  feedback_settings_files.md  feedback_test_first.md  feedback_venv.md
public-site/: capture.html
supabase/: AGENTS.md  config.toml
supabase/.temp/: pooler-url  project-ref
supabase/functions/_shared/: database.types.ts
supabase/functions/capture-api/: index.ts
supabase/functions/capture-form/: index.ts
supabase/functions/open-brain-mcp/: deno.json  index.ts
supabase/migrations/: 20260307151954_remote_schema.sql  20260315190151_add_visibility_verified_and_comments.sql  20260316122001_add_prompt_templates.sql
tools/: AGENTS.md  json_value.md
tools/review-visibility/: .gitignore  pyproject.toml
tools/review-visibility/src/: main.py  models.py
tools/review-visibility/tests/: conftest.py  test_api.py  test_helpers.py  test_main_entry.py  test_parsers.py  test_tui.py
